# myboost

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
myboost/: base.py  criterion.py  leaf.py  loss.py  stump.py
src/myboost/: base.py  loss.py  regularization.py  tree.py
