[metadata]
name = myboost
license = MIT
summary = gradient boosting from scratch
long_description = file:README.md
author = kiyomizuhi
author_email = kiyomizuhi@foobar.com
home-page = https://github.com/kiyomizuhi/myboost
classifier =
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

[options]
install_requires =
    numpy==1.20.2
package_dir=
    =myboost
packages=find:

[options.packages.find]
where=myboost

[flake8]
max-line-length = 100
extend-ignore = E203
