[metadata]
name = myboost
license = MIT
summary = gradient boosting from scratch
long_description = file:README.md
author = kiyomizuhi
author_email = kiyomizuhi@foobar.com
home-page = https://github.com/kiyomizuhi/myboost
classifier =
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

[options]
install_requires =
    numpy==1.20.2
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
